# malicious-link-detector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
bot/: discord_bot.py  slack_bot.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css
detector/: __init__.py  api.py  cli.py  core.py  database.py  intelligence.py  janitor.py  reports.py  reputation.py  scanner.py  ssl_check.py  visual.py  whois_check.py
detector/data/: popular_domains.json
detector/integrations/: geo_intel.py  threat_intel.py
extension/: manifest.json  popup.html  popup.js
malicious_link_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_core.py  test_phase2.py  test_phase3.py
